Update styles.css to avoid line overlap

--- a/styles.css
+++ b/styles.css
@@ -112,14 +112,16 @@ header img {
 }
 
 .recents-work {
-  font-family: InterBold, sans-serif;
-  font-style: normal;
-  font-size: 40px;
-  line-height: 52px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.recents-work {
+  font-family: InterBold, sans-serif;
+  font-style: normal;
+  font-size: 40px;
   text-align: center;
   color: #172b4d;
   padding: 30px;
